deleted endpoint for getting list of sensitive record types
