# internal/application/sensitive_records/handlers.go
@@ -3,7 +3,6 @@ package sensitive_records
 import "github.com/SpaceSlow/gophkeeper/internal/domain/sensitive_records"
 
 type Repository interface {
-	ListSensitiveRecordTypes() ([]sensitive_records.SensitiveRecordType, error)
 	CreateSensitiveRecord(sensitiveRecord *sensitive_records.SensitiveRecord) (*sensitive_records.SensitiveRecord, error)
 	Close()
 }
