# internal/infrastructure/sensitive_records/postgres.go
@@ -41,32 +41,6 @@ func (r *PostgresRepo) CreateSensitiveRecord(record *sensitive_records.Sensitive
 	return newRecord, nil
 }
 
-func (r *PostgresRepo) ListSensitiveRecordTypes() ([]sensitive_records.SensitiveRecordType, error) {
-	rows, err := r.pool.Query(
-		r.ctx,
-		"SELECT id, name FROM sensitive_record_types",
-	) // TODO fix queries
-
-	if err != nil {
-		return nil, err
-	}
-
-	types := make([]sensitive_records.SensitiveRecordType, 0)
-	for rows.Next() {
-		var (
-			id   int
-			name string
-		)
-
-		err := rows.Scan(&id, &name)
-		if err != nil {
-			return nil, err
-		}
-		t := sensitive_records.NewSensitiveRecordType(id, name)
-		types = append(types, *t)
-	}
-	return types, nil
-}
 func (r *PostgresRepo) Close() {
 	r.pool.Close()
 }
